Shoreditch: Fix My Account buttons spacing issue. See #28.

--- a/shoreditch/woocommerce.css
+++ b/shoreditch/woocommerce.css
@@ -498,6 +498,13 @@ ul.products li.product {
   vertical-align: bottom;
   margin-left: .5rem; }
 
+.woocommerce-account .woocommerce-MyAccount-content table .button {
+	word-wrap: normal;
+	word-break: normal;
+	display: inline-block;
+	margin: .3em;
+}
+
 @media screen and (min-width: 768px) {
   .woocommerce-account .entry-content .woocommerce:before, .woocommerce-account .entry-content .woocommerce:after {
     content: "";
